added google maps to index.html and index-german.html

--- a/index-german.html
+++ b/index-german.html
@@ -283,12 +283,7 @@ Wir wissen, wie man den besten Service bietet. Die Einhaltung von Fristen ist un
               >@serhii_khrystoiev</a
             >
           </p>
-          <img
-            src="./images/глайсдорф.png"
-            alt="Lage"
-            width="450px"
-            height="248px"
-          />
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d9069.92965709535!2d15.636396056784774!3d47.084679699316936!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x476e4de1c5801353%3A0x8f5b923241e76921!2zODIwMCBMYcOfbml0enRoYWwsINCQ0LLRgdGC0YDRltGP!5e1!3m2!1suk!2snl!4v1731371089304!5m2!1suk!2snl" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
       </section>
       <!-- ФОРМА  Formular-->
