--- a/index.html
+++ b/index.html
@@ -43,21 +43,34 @@
         <nav class="nav">
           <ul class="list nav-list">
             <li><a href="#benefits" class="link link-header">Переваги</a></li>
-            <li><a href="#our-customers" class="link link-header">Клієнти</a></li>
-            <li><a href="#our-employees" class="link link-header">Працівники</a></li>
+            <li>
+              <a href="#our-customers" class="link link-header">Клієнти</a>
+            </li>
+            <li>
+              <a href="#our-employees" class="link link-header">Працівники</a>
+            </li>
             <li><a href="#about-us" class="link link-header">Про нас</a></li>
           </ul>
         </nav>
 
         <ul class="list list-lang">
           <li><a href="" class="link link-lang disabled">uk</a></li>
-          <li><a href="./index-german.html" class="link link-lang enabled">de</a></li>
+          <li>
+            <a href="./index-german.html" class="link link-lang enabled">de</a>
+          </li>
         </ul>
         <a href="" class="link link-logo">Logo</a>
         <ul class="list list-communication">
-          <li><a href="tel:+1(111)-111-11-11" class="link link-communication">+1(111)-111-11-11</a></li>
           <li>
-            <a href="mailto:info.autodienst.at@gmail.com" class="link link-communication">
+            <a href="tel:+1(111)-111-11-11" class="link link-communication"
+              >+1(111)-111-11-11</a
+            >
+          </li>
+          <li>
+            <a
+              href="mailto:info.autodienst.at@gmail.com"
+              class="link link-communication"
+            >
               info.autodienst.at@gmail.com
             </a>
           </li>
@@ -92,7 +105,7 @@
         </div>
       </section>
       <!-- ПЕРЕВАГИ  -->
-      <section class="benefits"  id="benefits">
+      <section class="benefits" id="benefits">
         <div class="container">
           <h2 class="title">Наші переваги</h2>
           <ul class="list list-benefits">
@@ -142,7 +155,7 @@
                 </p>
               </div>
             </li>
-             <li class="item-benefits">
+            <li class="item-benefits">
               <div class="img-text">
                 <img
                   src="./images/частина двигуна.jpg"
@@ -204,7 +217,7 @@
                     class="img-employees"
                   />
                   <p class="text-employees">
-                      Ремонт ходової частини з 10-м досвідом
+                    Ремонт ходової частини з 10-м досвідом
                   </p>
                 </div>
               </div>
@@ -214,9 +227,8 @@
                     src="./images/Богдан-Степаненко.jpg"
                     alt="Богдан Степаненко"
                     class="img-employees"
-                                     />
-                  <p class="text-employees">
-                    Механік з 7-річним досвідом                   </p>
+                  />
+                  <p class="text-employees">Механік з 7-річним досвідом</p>
                 </div>
               </div>
               <div class="swiper-slide">
@@ -225,19 +237,18 @@
                     src="./images/Антуан-Жекович.jpg"
                     alt="Антуан Жекович"
                     class="img-employees"
-                                       />
+                  />
                   <p class="text-employees">
                     Фарбування корпусу авто понад 6 років
                   </p>
                 </div>
               </div>
-                         <div class="swiper-slide">
+              <div class="swiper-slide">
                 <div class="item-employees">
                   <img
                     src="./images/Павло-Денисюк.jpg"
                     alt="Павло Денисюк"
                     class="img-employees"
-                     
                   />
                   <p class="text-employees">
                     Ремонт двигуна з 8-м досвідом роботи
@@ -250,9 +261,9 @@
                     src="./images//Назар-Коваль.jpg"
                     alt="Назар Коваль"
                     class="img-employees"
-                                       />
+                  />
                   <p class="text-employees">
-                    Ремонт авто  з 11-м досвідом роботи
+                    Ремонт авто з 11-м досвідом роботи
                   </p>
                 </div>
               </div>
@@ -263,7 +274,7 @@
                     src="./images/Ігор-Пономар.jpg"
                     alt="Ігор Пономар"
                     class="img-employees"
-                                      />
+                  />
                   <p class="text-employees">
                     Ремонт двигуна з 12 досвідом роботи
                   </p>
@@ -298,12 +309,15 @@
               >@serhii_khrystoiev</a
             >
           </p>
-          <img
-            src="./images/глайсдорф.png"
-            alt="місце розташування"
-            width="450px"
-            height="248"
-          />
+          <iframe
+            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d4319.956089142808!2d34.5343829!3d49.5613437!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40d82f10b37cc43b%3A0xd5cb71d39ddc76c2!2z0LLRg9C70LjRhtGPINCa0LDQs9Cw0LzQu9C40LrQsCwgNzYsINCf0L7Qu9GC0LDQstCwLCDQn9C-0LvRgtCw0LLRgdGM0LrQsCDQvtCx0LvQsNGB0YLRjCwg0KPQutGA0LDRl9C90LAsIDM2MDAw!5e1!3m2!1suk!2snl!4v1731370564006!5m2!1suk!2snl"
+            width="600"
+            height="450"
+            style="border: 0"
+            allowfullscreen=""
+            loading="lazy"
+            referrerpolicy="no-referrer-when-downgrade"
+          ></iframe>
         </div>
       </section>
       <!-- ФОРМА  -->
@@ -345,8 +359,12 @@
         <a href="" class="link link-logo logo-footer">Logo</a>
         <p class="copyright">
           &#169;Всі права захищені.
-          <a href="./politic-confidential.html" class="index-confidential">Політика конфіденційності</a>
-        <a href="./offer-agreement.html" class="index-confidential">Договір оферти</a>
+          <a href="./politic-confidential.html" class="index-confidential"
+            >Політика конфіденційності</a
+          >
+          <a href="./offer-agreement.html" class="index-confidential"
+            >Договір оферти</a
+          >
         </p>
       </div>
     </footer>
