added name address of google map

--- a/index.html
+++ b/index.html
@@ -318,6 +318,7 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
+          <p class="text-map"> Полтава, вул. Кагамлика 76А</p>
         </div>
       </section>
       <!-- ФОРМА  -->
