--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
             <li class="item-benefits">
               <div class="img-text">
                 <img
-                  src="./images/гайкові ключі.jpg"
+                  src="./images/гайкові-ключі.jpg"
                   alt="гайкові ключі"
                   width="450"
                   height="450"
@@ -158,7 +158,7 @@
             <li class="item-benefits">
               <div class="img-text">
                 <img
-                  src="./images/частина двигуна.jpg"
+                  src="./images/частина-двигуна.jpg"
                   alt="xfcnbyf ldbueyf"
                   width="450"
                   height="450"
@@ -318,7 +318,7 @@
             loading="lazy"
             referrerpolicy="no-referrer-when-downgrade"
           ></iframe>
-          <p class="text-map"> Полтава, вул. Кагамлика 76А</p>
+          <p class="text-map">Полтава, вул. Кагамлика 76А</p>
         </div>
       </section>
       <!-- ФОРМА  -->
@@ -350,6 +350,15 @@
                 pattern="^(\+38\(0\d{2}\)\d{3}-\d{2}-\d{2})$"
                 class="form-input"
             /></label>
+            <label class="form-policy">
+              <input type="checkbox" name="policy" class="form-checkbox" />
+              <a href="./politic-confidential.html" class="index-confidential"
+                >Політика конфіденційності.</a
+              >
+              <a href="./offer-agreement.html" class="index-confidential"
+                >Договір оферти</a
+              >
+            </label>
             <button type="submit" class="button button-form">Відправити</button>
           </form>
         </div>
@@ -358,15 +367,7 @@
     <footer class="footer">
       <div class="container">
         <a href="" class="link link-logo logo-footer">Logo</a>
-        <p class="copyright">
-          &#169;Всі права захищені.
-          <a href="./politic-confidential.html" class="index-confidential"
-            >Політика конфіденційності</a
-          >
-          <a href="./offer-agreement.html" class="index-confidential"
-            >Договір оферти</a
-          >
-        </p>
+        <p class="copyright">&#169;Всі права захищені.</p>
       </div>
     </footer>
     <!-- МОБІЛЬНЕ МЕНЮ  -->
