added attribute required to input checkbox

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
                 class="form-input"
             /></label>
             <label class="form-policy">
-              <input type="checkbox" name="policy" class="form-checkbox" />
+              <input type="checkbox" name="policy" class="form-checkbox" required />
               <a href="./politic-confidential.html" class="index-confidential"
                 >Політика конфіденційності.</a
               >
